--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+*.idea
+/front/node_modules
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+/front/coverage
 
 # production
-/build
+/front/build
 
 # misc
 .DS_Store
