--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-semantic-ui-range": "^0.7.1",
+    "react-yandex-share": "^1.0.7",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.1"
   },
